--- a/msupport/build.gradle
+++ b/msupport/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     api 'com.android.support:appcompat-v7:27.1.1'
     api 'com.android.support:design:27.1.1'
     api 'com.android.support:support-v4:27.1.1'
+    api 'com.android.support:recyclerview-v7:27.1.1'
     // retrofit
     api 'com.squareup.retrofit2:retrofit:2.3.0'
     api 'com.squareup.retrofit2:converter-gson:2.2.0'
@@ -37,4 +38,8 @@ dependencies {
     api 'com.android.support:multidex:1.0.3'
     // okgo
     api 'com.lzy.net:okgo:3.0.4'
+    // log
+    implementation 'com.orhanobut:logger:2.1.1'
+    // utils
+    api 'com.blankj:utilcode:1.12.3'
 }
