--- a/msupport/build.gradle
+++ b/msupport/build.gradle
@@ -46,4 +46,9 @@ dependencies {
     api 'com.yanzhenjie:permission:2.0.0-rc4'
     // gson
     api 'com.google.code.gson:gson:2.8.2'
+    // EventBus
+    api 'org.greenrobot:eventbus:3.1.1'
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 }
