--- a/msupport/build.gradle
+++ b/msupport/build.gradle
@@ -51,4 +51,7 @@ dependencies {
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    // RxJava
+    api 'io.reactivex.rxjava2:rxjava:2.1.9'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
 }
