--- a/msupport/build.gradle
+++ b/msupport/build.gradle
@@ -5,7 +5,7 @@ android {
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
@@ -21,19 +21,16 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     // Android
     api 'com.android.support:appcompat-v7:27.1.1'
     api 'com.android.support:design:27.1.1'
     api 'com.android.support:support-v4:27.1.1'
     api 'com.android.support:recyclerview-v7:27.1.1'
-    // retrofit
-    api 'com.squareup.retrofit2:retrofit:2.3.0'
-    api 'com.squareup.retrofit2:converter-gson:2.2.0'
     // dex
     api 'com.android.support:multidex:1.0.3'
     // okgo
@@ -43,7 +40,7 @@ dependencies {
     // utils
     api 'com.blankj:utilcode:1.12.3'
     // permission
-    api 'com.yanzhenjie:permission:2.0.0-rc4'
+    api 'com.yanzhenjie:permission:2.0.0-rc5'
     // gson
     api 'com.google.code.gson:gson:2.8.2'
     // EventBus
@@ -54,4 +51,6 @@ dependencies {
     // RxJava
     api 'io.reactivex.rxjava2:rxjava:2.1.9'
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    // state view
+    api 'com.github.vlonjatg:progress-activity:2.0.5'
 }
